<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2015 Volcano. All rights reserved. -->

<resources>

    <string-array name="array_field_actions">
        <item>Copy</item>
    </string-array>

    <string-array name="array_field_types">
        <item>String</item>
        <item>String (Multiline)</item>
        <item>Date</item>
        <item>Password (Number)</item>
        <item>Password</item>
        <item>Url</item>
        <item>Phone</item>
        <item>Email</item>
        <item>Number</item>
    </string-array>

    <string name="app_name">eSecureBox</string>
    <string name="app_url_store">https://play.google.com/store/apps/details?id=</string>

    <string name="alert_cancel_create_account">Discard this account?</string>
    <string name="alert_cancel_edit_account">Discard changes to this account?</string>
    <string name="alert_delete_account">Delete this account?</string>
    <string name="alert_load_accounts">Your box is not available\nCheck network connection and tap to try again</string>
    <string name="alert_load_categories">Your box is not available\nCheck network connection and tap to try again</string>
    <string name="alert_no_account">Box is Empty!\nUse + to add item in your box</string>
    <string name="alert_signout">Are you sure you want to sign out?</string>

    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_add_field">Add more items</string>
    <string name="button_add_uppercase">ADD</string>
    <string name="button_cancel_uppercase">CANCEL</string>
    <string name="button_choose_uppercase">CHOOSE</string>
    <string name="button_close_uppercase">CLOSE</string>
    <string name="button_create_new_uppercase">CREATE NEW</string>
    <string name="button_create_uppercase">CREATE</string>
    <string name="button_del_uppercase">DEL</string>
    <string name="button_delete_uppercase">DELETE</string>
    <string name="button_discard_uppercase">DISCARD</string>
    <string name="button_edit_profile_uppercase">UPDATE</string>
    <string name="button_keep_editing_uppercase">KEEP EDITING</string>
    <string name="button_submit_uppercase">SUBMIT</string>
    <string name="button_signin_uppercase">SIGN IN</string>
    <string name="button_signout_uppercase">SIGN OUT</string>
    <string name="button_signup_uppercase">SIGN UP</string>

    <string name="email_subject_bug_report" formatted="false">%s (version %s)</string>
    <string name="email_choose_app_title">Send email via…</string>

    <string name="error_email_invalid">Email is not valid</string>
    <string name="error_email_not_empty">Email can not be empty</string>
    <string name="error_name_not_empty">Name can not be empty</string>
    <string name="error_password_invalid">Invalid password</string>
    <string name="error_password_minimum_character">Password must be at least 6 characters</string>
    <string name="error_username_not_empty">Username can not be empty</string>

    <string name="hint_account_title">Enter title</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_navigation_close">Close</string>
    <string name="hint_navigation_open">Open</string>
    <string name="hint_new_account">New Account</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_select">All of your account information will be protected and encrypted by your password. Please select a memorable password.</string>
    <string name="hint_search_fields">Search for items</string>
    <string name="hint_select_sub_category">Select Account Type</string>
    <string name="hint_username">Username</string>

    <string name="label_about_dialog_content_general">A secure and reliable box to save your private information.\nCopyright © 2015 Volcano.</string>
    <string name="label_about_dialog_title">About</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_category">Category</string>
    <string name="label_copyright">Copyright © 2015 Volcano</string>
    <string name="label_delete">Delete</string>
    <string name="label_change_password_dialog_title">Change password</string>
    <string name="label_edit_account">Edit Item</string>
    <string name="label_enter_passcode">Enter your passcode</string>
    <string name="label_enter_new_passcode">Enter your new passcode</string>
    <string name="label_enter_old_passcode">Enter your old passcode</string>
    <string name="label_initialize_data">Initializing for first time\n Be patient! It takes less than a minute…</string>
    <string name="label_new_account">New Item</string>
    <string name="label_new_item">New Item</string>
    <string name="label_ninety_nine_plus">99+</string>
    <string name="label_re_enter_passcode">Re-enter your passcode</string>
    <string name="label_re_enter_new_passcode">Re-enter your new passcode</string>
    <string name="label_settings">Settings</string>
    <string name="label_share_choose_app">Share via…</string>
    <string name="label_sign_out">Sign out</string>
    <string name="label_signup">Don\'t have an account? Sign up.</string>

    <string name="menu_save">Save</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="preference_general_category_title">GENERAL</string>
    <string name="preference_general_change_password_title">Change password</string>
    <string name="preference_general_profile_edit_title">Edit profile</string>
    <string name="preference_other_category_title">OTHER</string>
    <string name="preference_other_about_title">About</string>
    <string name="preference_other_feedback_title">Feedback</string>
    <string name="preference_other_rate_title">Rate and review</string>
    <string name="preference_other_share_title">Share app</string>
    <string name="preference_passcode_category_title">PASSCODE</string>
    <string name="preference_passcode_change_title">Change passcode</string>
    <string name="preference_passcode_disable_title">Turn passcode off</string>
    <string name="preference_passcode_enable_title">Turn passcode on</string>

    <string name="snackbar_text_field_deleted">Item removed</string>
    <string name="snackbar_action_undo">Undo</string>

    <string name="share_subject">eSecureBox App</string>
    <string name="share_body">\neSecureBox is a free and secure app to store all your private info
        in one box and get them anywhere you want. Perfect Password Manager with simple and user friendly design.\n
        Download it and enjoy!\n\n http://www.eSecureBox.net</string>

    <string name="toast_account_create_failed">Unable create new item</string>
    <string name="toast_account_delete_successful">Item deleted successfully</string>
    <string name="toast_account_delete_failed">Unable delete item</string>
    <string name="toast_account_load_failed">Unable load item</string>
    <string name="toast_account_save_failed">Unable save item</string>
    <string name="toast_account_save_validation_no_field">Please insert information</string>
    <string name="toast_account_save_validation_title_empty">Please insert title</string>
    <string name="toast_account_update_failed">Unable update item</string>
    <string name="toast_category_try_get_category">Try preparing creating items…</string>
    <string name="toast_category_create_account_unavailable">Please check network connection and try again</string>
    <string name="toast_change_password_successful">Password changed successfully</string>
    <string name="toast_change_password_failed">Unable change password</string>
    <string name="toast_copy_to_clipboard">Copied to clipboard</string>
    <string name="toast_device_offline_message">Your device appears to be offline</string>
    <string name="toast_edit_profile_successful">Profile updated successfully</string>
    <string name="toast_edit_profile_failed">Unable update profile</string>
    <string name="toast_initialize_failed">Initialization failed</string>
    <string name="toast_invalid_username_or_password">Invalid username or password</string>
    <string name="toast_new_item_name_should_filled">Please insert name</string>
    <string name="toast_new_item_save_failed">Unable to save</string>
    <string name="toast_load_category_failed">Unable load category</string>
    <string name="toast_load_email_client_failed">Not found any email app on your device</string>
    <string name="toast_load_share_client_failed">Not found any share app on your device</string>
    <string name="toast_no_network_connection">Please check network connection and try again</string>
    <string name="toast_passcode_changed">Passcode changed</string>
    <string name="toast_passcode_disabled">Passcode disabled</string>
    <string name="toast_passcode_enabled">Passcode enabled</string>
    <string name="toast_passcode_invalid">Wrong passcode, please try again</string>
    <string name="toast_passcode_not_matched">The Passcodes didn\'t match, please try again</string>
    <string name="toast_signup_failed">Unable signup</string>

</resources>
