<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2015 Volcano. All rights reserved. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_25"
            android:layout_marginBottom="@dimen/margin_8"
            android:drawablePadding="@dimen/margin_10"
            android:drawableTop="@drawable/icon_esecurebox"
            style="@style/Text.RegularDark20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/edit_pin_1"
                style="@style/Text.PassCode"
                android:tag="1"/>

            <EditText
                android:id="@+id/edit_pin_2"
                style="@style/Text.PassCode"
                android:tag="2"/>

            <EditText
                android:id="@+id/edit_pin_3"
                style="@style/Text.PassCode"
                android:tag="3"/>

            <EditText
                android:id="@+id/edit_pin_4"
                style="@style/Text.PassCode"
                android:tag="4"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                android:text="@string/button_1"
                android:tag="1"
                style="@style/ButtonPassCode" />

            <Button
                android:id="@+id/button_2"
                android:text="@string/button_2"
                android:tag="2"
                style="@style/ButtonPassCode" />

            <Button
                android:id="@+id/button_3"
                android:text="@string/button_3"
                android:tag="3"
                style="@style/ButtonPassCode" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                android:text="@string/button_4"
                android:tag="4"
                style="@style/ButtonPassCode"/>

            <Button
                android:id="@+id/button_5"
                android:text="@string/button_5"
                android:tag="5"
                style="@style/ButtonPassCode"/>

            <Button
                android:id="@+id/button_6"
                android:text="@string/button_6"
                android:tag="6"
                style="@style/ButtonPassCode"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                android:text="@string/button_7"
                android:tag="7"
                style="@style/ButtonPassCode"/>

            <Button
                android:id="@+id/button_8"
                android:text="@string/button_8"
                android:tag="8"
                style="@style/ButtonPassCode"/>

            <Button
                android:id="@+id/button_9"
                android:text="@string/button_9"
                android:tag="9"
                style="@style/ButtonPassCode"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonPassCode"/>

            <Button
                android:id="@+id/button_0"
                android:text="@string/button_0"
                android:tag="0"
                style="@style/ButtonPassCode"/>

            <Button
                android:id="@+id/button_clear"
                android:text="@string/button_del_uppercase"
                style="@style/ButtonPassCode"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
