<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2015 Volcano. All rights reserved. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/icon_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="com.volcano.esecurebox.widget.VlSearchView"/>

    <item
        android:id="@+id/menu_setting"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_sign_out"
        android:title="@string/menu_sign_out"
        android:orderInCategory="101"
        app:showAsAction="never"/>

</menu>
