<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2015 Volcano. All rights reserved. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@android:color/white">

    <com.volcano.esecurebox.widget.RobotoEditText
        android:id="@+id/edit_search"
        android:layout_alignParentTop="true"
        android:hint="@string/hint_search_fields"
        style="@style/Text.FullWidth"/>

    <RelativeLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_dialog_height"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_8">

        <com.volcano.esecurebox.widget.RobotoTextView
            android:id="@+id/button_choose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/button_choose_uppercase"
            android:background="@drawable/ripple_effect"
            style="@style/ButtonDialog" />

        <com.volcano.esecurebox.widget.RobotoTextView
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_12"
            android:layout_toLeftOf="@id/button_choose"
            android:layout_toStartOf="@id/button_choose"
            android:background="@drawable/ripple_effect"
            android:text="@string/button_cancel_uppercase"
            style="@style/ButtonDialog" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/layout_field_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edit_search"
        android:layout_above="@id/layout_buttons">

        <fragment
            android:id="@+id/fragment_field_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.volcano.esecurebox.fragment.FieldListFragment" />

    </FrameLayout>

</RelativeLayout>