<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2015 Volcano. All rights reserved. -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout
        android:id="@+id/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/scroll_view_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <com.volcano.esecurebox.widget.RobotoEditText
                android:id="@+id/text_account_title"
                android:hint="@string/hint_account_title"
                android:visibility="gone"
                style="@style/Text.FullWidth"/>

            <RelativeLayout
                android:id="@+id/layout_sub_category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_56"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/image_sub_category"
                    android:layout_width="@dimen/circle_drawable_size"
                    android:layout_height="@dimen/circle_drawable_size"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_25"
                    android:layout_marginEnd="@dimen/margin_25"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    tools:ignore="contentDescription" />

                <com.volcano.esecurebox.widget.RobotoTextView
                    android:id="@+id/text_sub_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/image_sub_category"
                    android:layout_toEndOf="@id/image_sub_category"
                    android:hint="@string/hint_select_sub_category"
                    style="@style/Text.RegularDarker16" />

                <View
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/image_sub_category"
                    android:layout_toEndOf="@+id/image_sub_category"
                    style="@style/Divider" />

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/layout_sub_category_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <fragment
                    android:id="@+id/fragment_sub_category_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.volcano.esecurebox.fragment.SubCategoryListFragment"
                    tools:layout="@layout/fragment_sub_category_list"/>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/layout_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbars="vertical"/>

            <com.volcano.esecurebox.widget.RobotoTextView
                android:id="@+id/button_add_field"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_56"
                android:layout_marginLeft="@dimen/margin_71"
                android:layout_marginStart="@dimen/margin_71"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:gravity="center_vertical"
                android:text="@string/button_add_field"
                android:textColor="@color/grey_2"
                style="@style/Text.RegularGrey16"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>